--- a/Doan_sosuckhoe/app/src/main/AndroidManifest.xml
+++ b/Doan_sosuckhoe/app/src/main/AndroidManifest.xml
@@ -1,6 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.example.doan_sosuckhoe">
+
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.permission.CALL_PHONE" />
 
     <application
         android:allowBackup="true"
@@ -10,23 +16,36 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Doan_sosuckhoe">
         <activity
-            android:name=".Healthindex"
+            android:name=".PersonalInfomation"
+            android:exported="true" />
+        <activity
+            android:name=".VacinatedCetification"
+            android:exported="true" />
+        <activity
+            android:name=".QRCode"
+            android:exported="false" />
+        <activity
+            android:name=".ResetPassword"
+            android:exported="false" />
+        <activity
+            android:name=".VerifyOTP"
             android:exported="false" />
         <activity
             android:name=".Medicalappointment"
             android:exported="true" />
-        <activity
+        <!--activity
             android:name=".Takemedicines"
+            android:exported="true" />-->
+        <activity
+            android:name=".Reminder"
             android:exported="true" />
         <activity
-            android:name=".HealthProfile"
-            android:exported="true" />
-        <activity
-            android:name=".PersonalInfomation"
+            android:name=".Healthindex"
             android:exported="true" />
         <activity
             android:name=".Homepage"
             android:exported="true" />
+
         <activity
             android:name=".Register"
             android:exported="true" />
